# higv-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aphage.me.drawio  arm-linux.cmake
api-demo/src/: main.cpp
lib/higv/include/: hi_go.h  hi_go_bliter.h  hi_go_comm.h  hi_go_cursor.h  hi_go_decoder.h  hi_go_encoder.h  hi_go_errno.h  hi_go_gdev.h  hi_go_surface.h  hi_go_text.h  hi_go_winc.h  hi_gv.h  hi_gv_adm.h  hi_gv_animation.h  hi_gv_app.h  hi_gv_button.h  hi_gv_charts.h  hi_gv_clock.h  hi_gv_conf.h  hi_gv_coremod.h  hi_gv_cursor.h  hi_gv_ddb.h  hi_gv_edit.h  hi_gv_errno.h  hi_gv_gesture.h  hi_gv_graphiccontext.h  hi_gv_image.h  hi_gv_imageex.h  hi_gv_imewindow.h  hi_gv_input.h  hi_gv_lan.h  hi_gv_listbox.h  hi_gv_log.h  hi_gv_mlayer.h  hi_gv_msg.h  hi_gv_msgbox.h  hi_gv_multiedit.h  hi_gv_progressbar.h  hi_gv_resm.h  hi_gv_scaleview.h  (+12 more)
lib/higv/tools/32bit_xml2bin/: xml2bin
lib/higv/tools/64bit_xml2bin/: xml2bin
lib/mpp/include/: acodec.h  fisheye_calibrate.h  hi_ae_comm.h  hi_af_comm.h  hi_awb_comm.h  hi_comm_3a.h  hi_comm_adec.h  hi_comm_aenc.h  hi_comm_ai.h  hi_comm_aio.h  hi_comm_ao.h  hi_comm_dis.h  hi_comm_hdmi.h  hi_comm_ive.h  hi_comm_pq_ai.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_sns.h  hi_comm_vo.h  hi_ir_hal.h  hi_isp_bin.h  hi_isp_debug.h  hi_isp_defines.h  hi_md.h  hi_osal_user.h  hi_resampler_api.h  hi_sns_ctrl.h  hi_wtdg_hal.h  hifb.h  ivs_md.h  mpi_audio.h  mpi_awb.h  mpi_hdmi.h  mpi_isp.h  mpi_ive.h  mpi_pq_ai.h  mpi_region.h  mpi_vdec.h  mpi_vo.h  pwm.h  (+2 more)
lib/mpp/include/adapt/: hi_comm_isp_adapt.h  hi_comm_sns_adapt.h  hi_isp_bin_adapt.h  hi_sns_ctrl_adapt.h  mpi_isp_adapt.h
xml-demo/: CMakeLists.txt  xml-demo.hgp
xml-demo/src/: Application.cpp  main.cpp
xml-demo/src/config/: config.h
xml-demo/xml/: fonts.xml  languages.xml  page_main.xml  skin.xml
